<resources>
    <string name="app_name">Calculadora</string>
    <string name="str_cero">0</string>
    <string name="str_one">1</string>
    <string name="str_two">2</string>
    <string name="str_three">3</string>
    <string name="str_four">4</string>
    <string name="str_five">5</string>
    <string name="str_six">6</string>
    <string name="str_seven">7</string>
    <string name="str_eight">8</string>
    <string name="str_nine">9</string>
    <string name="str_plus">+</string>
    <string name="str_minus">-</string>
    <string name="str_by">*</string>
    <string name="str_equal">=</string>
    <string name="str_divide">/</string>
</resources>